--- a/customerWalletHistory.html
+++ b/customerWalletHistory.html
@@ -197,7 +197,7 @@
                 <li class="sidebar-list">
                   <i class="fa fa-thumb-tack"></i>
                   <a class="sidebar-link sidebar-title" href="#">
-                    <i class="fa fa-users text-white" aria-hidden="true"></i>
+                    <i class="fa fa-handshake-o text-white" aria-hidden="true"></i>
                     <span class="lan-6">Channel Partner</span>
                   </a>
                   <ul class="sidebar-submenu">
@@ -221,7 +221,7 @@
                 <li class="sidebar-list">
                     <i class="fa fa-thumb-tack"></i>
                     <a class="sidebar-link sidebar-title" href="#">
-                      <i class="fa fa-handshake-o text-white" aria-hidden="true"></i>
+                      <i class="fa fa-users text-white" aria-hidden="true"></i>
                       <span class="lan-6">Referral</span>
                     </a>
                     <ul class="sidebar-submenu">
@@ -302,36 +302,68 @@
                     <table class="table table-hover">
                       <thead>
                         <tr>
+                          <th scope="col"  class="fw-bold">No.</th>
                           <th scope="col"  class="fw-bold">Date</th>
                           <th scope="col"  class="fw-bold">Amount</th>
                         </tr>
                       </thead>
                       <tbody>
                         <tr>
+                          <th scope="row">1</th>
                           <td>2025-06-08</td>
                           <td>
-                            <span class="badge bg-success-subtle text-success me-1">₹500</span>
-                            <span class="badge bg-primary-subtle text-primary me-1">₹300</span>
-                            <span class="badge bg-warning-subtle text-warning">₹200</span>
+                            <span class="badge bg-success-subtle text-success me-1"><img src="./assets/images/money.png" alt=""> 500</span>
                           </td>
                         </tr>
                         <tr>
+                          <th scope="row">2</th>
                           <td>2025-06-07</td>
                           <td>
-                            <span class="badge bg-info-subtle text-info me-1">₹1000</span>
-                            <span class="badge bg-danger-subtle text-danger">₹450</span>
+                            <span class="badge bg-danger-subtle text-danger"><img src="./assets/images/money.png" alt=""> 450</span>
                           </td>
                         </tr>
                         <tr>
+                          <th scope="row">3</th>
                           <td>2025-06-06</td>
                           <td>
-                            <span class="badge bg-primary-subtle text-primary me-1">₹750</span>
-                            <span class="badge bg-success-subtle text-success">₹125</span>
+                            <span class="badge bg-success-subtle text-success"><img src="./assets/images/money.png" alt=""> 125</span>
                           </td>
                         </tr>
                       </tbody>
                     </table>
                   </div>
+                  <div class="d-flex justify-content-between align-items-center p-3">
+                     <div class="d-flex align-items-center">
+                      <span class="me-2 d-flex align-"> Show </span>
+                      <select class="form-select w-auto" aria-label="Show entries">
+                       <option selected>10</option>
+                       <option value="25">25</option>
+                       <option value="50">50</option>
+                       <option value="all">All</option>
+                     </select>
+                     <span class="ms-2"> Entries </span>
+                     </div>
+               
+                     <nav aria-label="Page navigation">
+                       <ul class="pagination pagination-dark pagin-border-sepagination-dark mb-0">
+                         <li class="page-item disabled">
+                           <a class="page-link" href="javascript:void(0)" tabindex="-1">Previous</a>
+                         </li>
+                         <li class="page-item">
+                           <a class="page-link" href="javascript:void(0)">1</a>
+                         </li>
+                         <li class="page-item active">
+                           <a class="page-link" href="javascript:void(0)">2 <span class="sr-only">(current)</span></a>
+                         </li>
+                         <li class="page-item">
+                           <a class="page-link" href="javascript:void(0)">3</a>
+                         </li>
+                         <li class="page-item">
+                           <a class="page-link" href="javascript:void(0)">Next</a>
+                         </li>
+                       </ul>
+                     </nav>
+                   </div>
                 </div>
               </div>
             </div>
