--- a/paymentHistory.html
+++ b/paymentHistory.html
@@ -197,7 +197,7 @@
                 <li class="sidebar-list">
                   <i class="fa fa-thumb-tack"></i>
                   <a class="sidebar-link sidebar-title" href="#">
-                    <i class="fa fa-users text-white" aria-hidden="true"></i>
+                    <i class="fa fa-handshake-o text-white" aria-hidden="true"></i>
                     <span class="lan-6">Channel Partner</span>
                   </a>
                   <ul class="sidebar-submenu">
@@ -221,7 +221,7 @@
                 <li class="sidebar-list">
                     <i class="fa fa-thumb-tack"></i>
                     <a class="sidebar-link sidebar-title" href="#">
-                      <i class="fa fa-handshake-o text-white" aria-hidden="true"></i>
+                      <i class="fa fa-users text-white" aria-hidden="true"></i>
                       <span class="lan-6">Referral</span>
                     </a>
                     <ul class="sidebar-submenu">
@@ -302,6 +302,7 @@
                     <table class="table table-hover">
                       <thead>
                         <tr>
+                          <th scope="col"  class="fw-bold">No.</th>
                           <th scope="col"  class="fw-bold">User Name</th>
                           <th scope="col"  class="fw-bold">Business Name</th>
                           <th scope="col"  class="fw-bold">Amount</th>
@@ -315,7 +316,8 @@
                         <tr>
                           <th scope="row">1</th>
                           <td>Jignesh Patel</td>
-                          <td>₹2,999</td>
+                          <td>Techno Solutions</td>
+                          <td><img src="./assets/images/money.png" alt=""> 2,999</td>
                           <td>Gold Plan</td>
                           <td>09-06-2025</td>
                           <td>PAY123456789</td>
@@ -324,7 +326,8 @@
                         <tr>
                           <th scope="row">2</th>
                           <td>Ravi Shah</td>
-                          <td>₹1,499</td>
+                          <td>Shree Traders</td>
+                          <td><img src="./assets/images/money.png" alt=""> 1,499</td>
                           <td>Silver Plan</td>
                           <td>08-06-2025</td>
                           <td>PAY123456790</td>
@@ -334,7 +337,8 @@
                         <tr>
                           <th scope="row">3</th>
                           <td>Kajal Mehta</td>
-                          <td>₹3,200</td>
+                          <td>Elegant Interiors</td>
+                          <td><img src="./assets/images/money.png" alt=""> 3,200</td>
                           <td>Platinum Plan</td>
                           <td>07-06-2025</td>
                           <td>PAY123456791</td>
@@ -344,7 +348,8 @@
                         <tr>
                           <th scope="row">4</th>
                           <td>Vikas Patel</td>
-                          <td>₹999</td>
+                          <td>Green Valley Organics</td>
+                          <td><img src="./assets/images/money.png" alt=""> 999</td>
                           <td>Basic Plan</td>
                           <td>06-06-2025</td>
                           <td>PAY123456792</td>
@@ -354,7 +359,8 @@
                         <tr>
                           <th scope="row">5</th>
                           <td>Neha Joshi</td>
-                          <td>₹2,000</td>
+                          <td>Infinity Fitness Club</td>
+                          <td><img src="./assets/images/money.png" alt=""> 2,000</td>
                           <td>Gold Plan</td>
                           <td>05-06-2025</td>
                           <td>PAY123456793</td>
@@ -364,7 +370,8 @@
                         <tr>
                           <th scope="row">6</th>
                           <td>Amit Rathod</td>
-                          <td>₹1,250</td>
+                          <td>Bright Minds Academy</td>
+                          <td><img src="./assets/images/money.png" alt=""> 1,250</td>
                           <td>Silver Plan</td>
                           <td>04-06-2025</td>
                           <td>PAY123456794</td>
@@ -373,8 +380,41 @@
                       </tbody>
                     </table>
                   </div>
+                   <div class="d-flex justify-content-between align-items-center p-3">
+                     <div class="d-flex align-items-center">
+                      <span class="me-2 d-flex align-"> Show </span>
+                      <select class="form-select w-auto" aria-label="Show entries">
+                       <option selected>10</option>
+                       <option value="25">25</option>
+                       <option value="50">50</option>
+                       <option value="all">All</option>
+                     </select>
+                     <span class="ms-2"> Entries </span>
+                     </div>
+               
+                     <nav aria-label="Page navigation">
+                       <ul class="pagination pagination-dark pagin-border-sepagination-dark mb-0">
+                         <li class="page-item disabled">
+                           <a class="page-link" href="javascript:void(0)" tabindex="-1">Previous</a>
+                         </li>
+                         <li class="page-item">
+                           <a class="page-link" href="javascript:void(0)">1</a>
+                         </li>
+                         <li class="page-item active">
+                           <a class="page-link" href="javascript:void(0)">2 <span class="sr-only">(current)</span></a>
+                         </li>
+                         <li class="page-item">
+                           <a class="page-link" href="javascript:void(0)">3</a>
+                         </li>
+                         <li class="page-item">
+                           <a class="page-link" href="javascript:void(0)">Next</a>
+                         </li>
+                       </ul>
+                     </nav>
+                   </div>
                 </div>
               </div>
+              
             </div>
           </div>
           </div>
