--- a/popularCategory.html
+++ b/popularCategory.html
@@ -197,7 +197,7 @@
                 <li class="sidebar-list">
                   <i class="fa fa-thumb-tack"></i>
                   <a class="sidebar-link sidebar-title" href="#">
-                    <i class="fa fa-users text-white" aria-hidden="true"></i>
+                    <i class="fa fa-handshake-o text-white" aria-hidden="true"></i>
                     <span class="lan-6">Channel Partner</span>
                   </a>
                   <ul class="sidebar-submenu">
@@ -221,7 +221,7 @@
                 <li class="sidebar-list">
                     <i class="fa fa-thumb-tack"></i>
                     <a class="sidebar-link sidebar-title" href="#">
-                      <i class="fa fa-handshake-o text-white" aria-hidden="true"></i>
+                      <i class="fa fa-users text-white" aria-hidden="true"></i>
                       <span class="lan-6">Referral</span>
                     </a>
                     <ul class="sidebar-submenu">
@@ -319,7 +319,7 @@
                                   </div>
                                   <div class="col-12">
                                   <div class="card-wrapper border rounded-3 light-card checkbox-checked mt-3">
-                                    <h4>Select Category</h4>
+                                    <h4>Select Sub Category</h4>
                                     <div class="row mt-3">
                                         <div class="col-sm-5">
                                     <label class="form-label" for="customState-wizard">Sub Category<span
@@ -399,6 +399,9 @@
                       </div>
                       <!-- Container-fluid Ends-->
                     </div>
+                    <div class="col-12 text-center mt-3">
+                       <button class="btn btn-primary" type="submit">Save</button>
+                     </div>
                   </div>
                 </div>
               </div>
