--- a/refferalActionHistroy.html
+++ b/refferalActionHistroy.html
@@ -197,7 +197,7 @@
                 <li class="sidebar-list">
                   <i class="fa fa-thumb-tack"></i>
                   <a class="sidebar-link sidebar-title" href="#">
-                    <i class="fa fa-users text-white" aria-hidden="true"></i>
+                    <i class="fa fa-handshake-o text-white" aria-hidden="true"></i>
                     <span class="lan-6">Channel Partner</span>
                   </a>
                   <ul class="sidebar-submenu">
@@ -221,7 +221,7 @@
                 <li class="sidebar-list">
                     <i class="fa fa-thumb-tack"></i>
                     <a class="sidebar-link sidebar-title" href="#">
-                      <i class="fa fa-handshake-o text-white" aria-hidden="true"></i>
+                      <i class="fa fa-users text-white" aria-hidden="true"></i>
                       <span class="lan-6">Referral</span>
                     </a>
                     <ul class="sidebar-submenu">
@@ -311,17 +311,17 @@
                         <tr>
                           <td>Neha Sharma</td>
                           <td>2025-05-28</td>
-                          <td>₹300</td>
+                          <td><img src="./assets/images/money.png" alt=""> 300</td>
                         </tr>
                         <tr>
                           <td>Kunal Bhatt</td>
                           <td>2025-06-03</td>
-                          <td>₹700</td>
+                          <td><img src="./assets/images/money.png" alt=""> 700</td>
                         </tr>
                         <tr>
                           <td>Sonali Desai</td>
                           <td>2025-06-05</td>
-                          <td>₹450</td>
+                          <td><img src="./assets/images/money.png" alt=""> 450</td>
                         </tr>
                       </tbody>
                     </table>
