--- a/CustomerWallet.html
+++ b/CustomerWallet.html
@@ -197,7 +197,7 @@
                 <li class="sidebar-list">
                   <i class="fa fa-thumb-tack"></i>
                   <a class="sidebar-link sidebar-title" href="#">
-                    <i class="fa fa-users text-white" aria-hidden="true"></i>
+                    <i class="fa fa-handshake-o text-white" aria-hidden="true"></i>
                     <span class="lan-6">Channel Partner</span>
                   </a>
                   <ul class="sidebar-submenu">
@@ -221,7 +221,7 @@
                 <li class="sidebar-list">
                     <i class="fa fa-thumb-tack"></i>
                     <a class="sidebar-link sidebar-title" href="#">
-                      <i class="fa fa-handshake-o text-white" aria-hidden="true"></i>
+                      <i class="fa fa-users text-white" aria-hidden="true"></i>
                       <span class="lan-6">Referral</span>
                     </a>
                     <ul class="sidebar-submenu">
@@ -302,6 +302,7 @@
                     <table class="table table-hover">
                       <thead>
                         <tr>
+                          <th scope="col"  class="fw-bold">No.</th>
                           <th scope="col"  class="fw-bold">Customer Name</th>
                           <th scope="col"  class="fw-bold">Type</th>
                           <th scope="col"  class="fw-bold">Wallet Amount</th>
@@ -310,9 +311,10 @@
                       </thead>
                       <tbody>
                         <tr>
+                          <th scope="row">1</th>
                           <td>Ravi Mehta</td>
                           <td><span class="badge bg-primary">Business</span></td>
-                          <td>₹1,200</td>
+                          <td><img src="./assets/images/money.png" alt=""> 1,200</td>
                           <td>
                             <a href="customerWalletHistory.html" class="btn btn-sm btn-info text-white">
                               <i class="fa fa-history me-1"></i>History
@@ -320,9 +322,10 @@
                           </td>
                         </tr>
                         <tr>
+                          <th scope="row">2</th>
                           <td>Neha Sharma</td>
                           <td><span class="badge bg-success">Channel Partner</span></td>
-                          <td>₹950</td>
+                          <td><img src="./assets/images/money.png" alt=""> 950</td>
                           <td>
                             <a href="customerWalletHistory.html" class="btn btn-sm btn-info text-white">
                               <i class="fa fa-history me-1"></i>History
@@ -330,9 +333,10 @@
                           </td>
                         </tr>
                         <tr>
+                          <th scope="row">3</th>
                           <td>Kunal Bhatt</td>
                           <td><span class="badge bg-primary">Business</span></td>
-                          <td>₹1,750</td>
+                          <td><img src="./assets/images/money.png" alt=""> 1,750</td>
                           <td>
                             <a href="customerWalletHistory.html" class="btn btn-sm btn-info text-white">
                               <i class="fa fa-history me-1"></i>History
@@ -342,6 +346,38 @@
                       </tbody>
                     </table>
                   </div>
+                  <div class="d-flex justify-content-between align-items-center p-3">
+                     <div class="d-flex align-items-center">
+                      <span class="me-2 d-flex align-"> Show </span>
+                      <select class="form-select w-auto" aria-label="Show entries">
+                       <option selected>10</option>
+                       <option value="25">25</option>
+                       <option value="50">50</option>
+                       <option value="all">All</option>
+                     </select>
+                     <span class="ms-2"> Entries </span>
+                     </div>
+               
+                     <nav aria-label="Page navigation">
+                       <ul class="pagination pagination-dark pagin-border-sepagination-dark mb-0">
+                         <li class="page-item disabled">
+                           <a class="page-link" href="javascript:void(0)" tabindex="-1">Previous</a>
+                         </li>
+                         <li class="page-item">
+                           <a class="page-link" href="javascript:void(0)">1</a>
+                         </li>
+                         <li class="page-item active">
+                           <a class="page-link" href="javascript:void(0)">2 <span class="sr-only">(current)</span></a>
+                         </li>
+                         <li class="page-item">
+                           <a class="page-link" href="javascript:void(0)">3</a>
+                         </li>
+                         <li class="page-item">
+                           <a class="page-link" href="javascript:void(0)">Next</a>
+                         </li>
+                       </ul>
+                     </nav>
+                   </div>
                 </div>
               </div>
             </div>
