--- a/WalletRequest.html
+++ b/WalletRequest.html
@@ -197,7 +197,7 @@
                 <li class="sidebar-list">
                   <i class="fa fa-thumb-tack"></i>
                   <a class="sidebar-link sidebar-title" href="#">
-                    <i class="fa fa-users text-white" aria-hidden="true"></i>
+                    <i class="fa fa-handshake-o text-white" aria-hidden="true"></i>
                     <span class="lan-6">Channel Partner</span>
                   </a>
                   <ul class="sidebar-submenu">
@@ -221,7 +221,7 @@
                 <li class="sidebar-list">
                     <i class="fa fa-thumb-tack"></i>
                     <a class="sidebar-link sidebar-title" href="#">
-                      <i class="fa fa-handshake-o text-white" aria-hidden="true"></i>
+                      <i class="fa fa-users text-white" aria-hidden="true"></i>
                       <span class="lan-6">Referral</span>
                     </a>
                     <ul class="sidebar-submenu">
@@ -316,10 +316,10 @@
                           <td>150</td>
                           <td>CoolFix AC Services</td>
                           <td>+91 98765 43210</td>
-                          <td>2025-06-09</td>
+                          <td>06-09-2025</td>
                           <td>
                             <div class="dropdown">
-                              <button class="btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                              <button class="custom-padding btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 <i class="fa fa-ellipsis-v"></i>
                               </button>
                               <ul class="dropdown-menu">
@@ -337,10 +337,10 @@
                           <td>200</td>
                           <td>FitLife Gym</td>
                           <td>+91 98234 56789</td>
-                          <td>2025-06-08</td>
+                          <td>06-08-2025</td>
                           <td>
                             <div class="dropdown">
-                              <button class="btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                              <button class="custom-padding btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 <i class="fa fa-ellipsis-v"></i>
                               </button>
                               <ul class="dropdown-menu">
@@ -358,10 +358,10 @@
                           <td>300</td>
                           <td>Bright Future School</td>
                           <td>+91 90123 45678</td>
-                          <td>2025-06-07</td>
+                          <td>06-07-2025</td>
                           <td>
                             <div class="dropdown">
-                              <button class="btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                              <button class="custom-padding btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 <i class="fa fa-ellipsis-v"></i>
                               </button>
                               <ul class="dropdown-menu">
@@ -379,10 +379,10 @@
                           <td>100</td>
                           <td>Yogi Wellness Center</td>
                           <td>+91 99876 54321</td>
-                          <td>2025-06-06</td>
+                          <td>06-06-2025</td>
                           <td>
                             <div class="dropdown">
-                              <button class="btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                              <button class="custom-padding btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 <i class="fa fa-ellipsis-v"></i>
                               </button>
                               <ul class="dropdown-menu">
@@ -400,10 +400,10 @@
                           <td>180</td>
                           <td>Smart Tours Agency</td>
                           <td>+91 91234 56780</td>
-                          <td>2025-06-05</td>
+                          <td>06-05-2025</td>
                           <td>
                             <div class="dropdown">
-                              <button class="btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                              <button class="custom-padding btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 <i class="fa fa-ellipsis-v"></i>
                               </button>
                               <ul class="dropdown-menu">
@@ -421,10 +421,10 @@
                           <td>250</td>
                           <td>Dr. Care Clinic</td>
                           <td>+91 98760 12345</td>
-                          <td>2025-06-04</td>
+                          <td>06-04-2025</td>
                           <td>
                             <div class="dropdown">
-                              <button class="btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                              <button class="custom-padding btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 <i class="fa fa-ellipsis-v"></i>
                               </button>
                               <ul class="dropdown-menu">
@@ -440,6 +440,38 @@
                       </tbody>
                     </table>
                   </div>
+                  <div class="d-flex justify-content-between align-items-center p-3">
+                     <div class="d-flex align-items-center">
+                      <span class="me-2 d-flex align-"> Show </span>
+                      <select class="form-select w-auto" aria-label="Show entries">
+                       <option selected>10</option>
+                       <option value="25">25</option>
+                       <option value="50">50</option>
+                       <option value="all">All</option>
+                     </select>
+                     <span class="ms-2"> Entries </span>
+                     </div>
+               
+                     <nav aria-label="Page navigation">
+                       <ul class="pagination pagination-dark pagin-border-sepagination-dark mb-0">
+                         <li class="page-item disabled">
+                           <a class="page-link" href="javascript:void(0)" tabindex="-1">Previous</a>
+                         </li>
+                         <li class="page-item">
+                           <a class="page-link" href="javascript:void(0)">1</a>
+                         </li>
+                         <li class="page-item active">
+                           <a class="page-link" href="javascript:void(0)">2 <span class="sr-only">(current)</span></a>
+                         </li>
+                         <li class="page-item">
+                           <a class="page-link" href="javascript:void(0)">3</a>
+                         </li>
+                         <li class="page-item">
+                           <a class="page-link" href="javascript:void(0)">Next</a>
+                         </li>
+                       </ul>
+                     </nav>
+                   </div>
                 </div>
               </div>
             </div>
