--- a/businessListing.html
+++ b/businessListing.html
@@ -197,7 +197,7 @@
                 <li class="sidebar-list">
                   <i class="fa fa-thumb-tack"></i>
                   <a class="sidebar-link sidebar-title" href="#">
-                    <i class="fa fa-users text-white" aria-hidden="true"></i>
+                    <i class="fa fa-handshake-o text-white" aria-hidden="true"></i>
                     <span class="lan-6">Channel Partner</span>
                   </a>
                   <ul class="sidebar-submenu">
@@ -221,7 +221,7 @@
                 <li class="sidebar-list">
                     <i class="fa fa-thumb-tack"></i>
                     <a class="sidebar-link sidebar-title" href="#">
-                      <i class="fa fa-handshake-o text-white" aria-hidden="true"></i>
+                      <i class="fa fa-users text-white" aria-hidden="true"></i>
                       <span class="lan-6">Referral</span>
                     </a>
                     <ul class="sidebar-submenu">
@@ -325,7 +325,7 @@
                             <td><a href="https://www.google.com/maps?q=28.613939,77.209021" target="_blank" title="Delhi"><i class="fa fa-map-marker text-primary fs-5"></i></a></td>
                             <td>
                               <div class="dropdown">
-                                <button class="btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <button class="custom-padding btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                   <i class="fa fa-ellipsis-v"></i>
                                 </button>
                                 <ul class="dropdown-menu">
@@ -345,10 +345,10 @@
                             <td>+91 9823456789</td>
                             <td>2025-06-03</td>
                             <td>VIN45678</td>
-                            <td><a href="https://www.google.com/maps?q=51.507351,-0.127758" target="_blank" title="London"><i class="fa fa-map-marker text-success fs-5"></i></a></td>
+                            <td><a href="https://www.google.com/maps?q=51.507351,-0.127758" target="_blank" title="London"><i class="fa fa-map-marker text-primary fs-5"></i></a></td>
                             <td>
                               <div class="dropdown">
-                                <button class="btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <button class="custom-padding btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                   <i class="fa fa-ellipsis-v"></i>
                                 </button>
                                 <ul class="dropdown-menu">
@@ -372,7 +372,7 @@
                             <td><a href="https://www.google.com/maps?q=28.613939,77.209021" target="_blank" title="Delhi"><i class="fa fa-map-marker text-primary fs-5"></i></a></td>
                             <td>
                               <div class="dropdown">
-                                <button class="btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <button class="custom-padding btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                   <i class="fa fa-ellipsis-v"></i>
                                 </button>
                                 <ul class="dropdown-menu">
@@ -393,10 +393,10 @@
                             <td>+91 9012345678</td>
                             <td>2025-06-07</td>
                             <td>PERF222</td>
-                            <td><a href="https://www.google.com/maps?q=35.689487,139.691706" target="_blank" title="Tokyo"><i class="fa fa-map-marker text-warning fs-5"></i></a></td>
+                            <td><a href="https://www.google.com/maps?q=35.689487,139.691706" target="_blank" title="Tokyo"><i class="fa fa-map-marker text-primary fs-5"></i></a></td>
                             <td>
                               <div class="dropdown">
-                                <button class="btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <button class="custom-padding btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                   <i class="fa fa-ellipsis-v"></i>
                                 </button>
                                 <ul class="dropdown-menu">
@@ -417,10 +417,10 @@
                             <td>+91 9871234560</td>
                             <td>2025-05-30</td>
                             <td>UFG7890</td>
-                            <td><a href="https://www.google.com/maps?q=51.507351,-0.127758" target="_blank" title="London"><i class="fa fa-map-marker text-success fs-5"></i></a></td>
+                            <td><a href="https://www.google.com/maps?q=51.507351,-0.127758" target="_blank" title="London"><i class="fa fa-map-marker text-primary fs-5"></i></a></td>
                             <td>
                               <div class="dropdown">
-                                <button class="btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <button class="custom-padding btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                   <i class="fa fa-ellipsis-v"></i>
                                 </button>
                                 <ul class="dropdown-menu">
@@ -441,10 +441,10 @@
                             <td>+91 9123450987</td>
                             <td>2025-06-02</td>
                             <td>GLF5643</td>
-                            <td><a href="https://www.google.com/maps?q=35.689487,139.691706" target="_blank" title="Tokyo"><i class="fa fa-map-marker text-warning fs-5"></i></a></td>
+                            <td><a href="https://www.google.com/maps?q=35.689487,139.691706" target="_blank" title="Tokyo"><i class="fa fa-map-marker text-primary fs-5"></i></a></td>
                             <td>
                             <div class="dropdown">
-                              <button class="btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                              <button class="custom-padding btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 <i class="fa fa-ellipsis-v"></i>
                               </button>
                               <ul class="dropdown-menu">
@@ -459,6 +459,38 @@
                       </tbody>
                     </table>
                   </div>
+                  <div class="d-flex justify-content-between align-items-center p-3">
+                     <div class="d-flex align-items-center">
+                      <span class="me-2 d-flex align-"> Show </span>
+                      <select class="form-select w-auto" aria-label="Show entries">
+                       <option selected>10</option>
+                       <option value="25">25</option>
+                       <option value="50">50</option>
+                       <option value="all">All</option>
+                     </select>
+                     <span class="ms-2"> Entries </span>
+                     </div>
+               
+                     <nav aria-label="Page navigation">
+                       <ul class="pagination pagination-dark pagin-border-sepagination-dark mb-0">
+                         <li class="page-item disabled">
+                           <a class="page-link" href="javascript:void(0)" tabindex="-1">Previous</a>
+                         </li>
+                         <li class="page-item">
+                           <a class="page-link" href="javascript:void(0)">1</a>
+                         </li>
+                         <li class="page-item active">
+                           <a class="page-link" href="javascript:void(0)">2 <span class="sr-only">(current)</span></a>
+                         </li>
+                         <li class="page-item">
+                           <a class="page-link" href="javascript:void(0)">3</a>
+                         </li>
+                         <li class="page-item">
+                           <a class="page-link" href="javascript:void(0)">Next</a>
+                         </li>
+                       </ul>
+                     </nav>
+                   </div>
                 </div>
               </div>
             </div>
